k8s/killercoda/04_application_multicontainer_issue.yaml
# https://killercoda.com/killer-shell-cka/scenario/application-multi-container-issue
# There is a multi-container Deployment in Namespace management which seems to have issues and is not getting ready.

# Write the logs of all containers to /root/logs.log .

# Can you see the reason for failure?



apiVersion: apps/v1
kind: Deployment
metadata:
  name: collect-data-debug
  namespace: management
  labels:
    app: collect-data-debug
spec:
  replicas: 3
  selector:
    matchLabels:
      app: collect-data-debug
  template:
    metadata:
      name: collect-data-debug-container
      labels:
        app: collect-data-debug
    spec:
      containers:
        - name: nginx
          image: nginx:1.21.6-alpine
        - name: httpd
          image: httpd:2.4.52-alpine
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: collect-data-debug
  namespace: management
  labels:
    app: collect-data-debug
spec:
  replicas: 3
  selector:
    matchLabels:
      app: collect-data-debug
  template:
    metadata:
      name: collect-data-debug-container
      labels:
        app: collect-data-debug
    spec:
      containers:
        - name: nginx
          image: nginx:1.21.6-alpine
        - name: httpd
          image: httpd:2.4.52-alpine
          ports:
            - containerPort: 8080
          command: ["httpd"]
          args: ["-D", "FOREGROUND", "-f", "/usr/local/apache2/conf/httpd.conf"]




---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: collect-data-debug
  namespace: management
  labels:
    app: collect-data-debug
spec:
  replicas: 3
  selector:
    matchLabels:
      app: collect-data-debug
  template:
    metadata:
      labels:
        app: collect-data-debug
    spec:
      containers:
        - name: nginx
          image: nginx:1.21.6-alpine
          ports:
            - containerPort: 3002
          volumeMounts:
            - name: nginx-conf
              mountPath: /etc/nginx/conf.d/default.conf
              subPath: default.conf
        - name: httpd
          image: httpd:2.4.52-alpine
          ports:
            - containerPort: 80
      volumes:   # <-- must be here, inside template.spec
        - name: nginx-conf
          configMap:
            name: nginx-config

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: collect-data-debug
  namespace: management
  labels:
    app: collect-data-debug
spec:
  replicas: 3
  selector:
    matchLabels:
      app: collect-data-debug
  template:
    metadata:
      labels:
        app: collect-data-debug
    spec:
      containers:
        - name: nginx
          image: nginx:1.21.6-alpine
          ports:
            - containerPort: 3002
          volumeMounts:
            - name: nginx-conf
              mountPath: /etc/nginx/conf.d/default.conf
              subPath: default.conf
            - name: log-storage
              mountPath: /logs.log
        - name: httpd
          image: httpd:2.4.52-alpine
          ports:
            - containerPort: 80
          volumeMounts:
            - name: log-storage
              mountPath: /logs.log
      volumes:
        - name: nginx-conf
          configMap:
            name: nginx-config
        - name: log-storage
          hostPath:
            path: /root/logs.log
            type: FileOrCreate
---














apiVersion: apps/v1
kind: Deployment
metadata:
  name: collect-data
  namespace: management
  labels:
    app: collect-data
spec:
  replicas: 3
  selector:
    matchLabels:
      app: collect-data
  template:
    metadata:
      labels:
        app: collect-data
    spec:
      containers:
        - name: nginx
          image: nginx:1.21.6-alpine
          ports:
            - containerPort: 3002
          volumeMounts:
            - name: nginx-conf
              mountPath: /etc/nginx/conf.d/default.conf
              subPath: default.conf
            - name: log-storage
              mountPath: /logs.log
        - name: httpd
          image: httpd:2.4.52-alpine
          ports:
            - containerPort: 80
          volumeMounts:
            - name: log-storage
              mountPath: /logs.log
      volumes:
        - name: nginx-conf
          configMap:
            name: collect-data-config
        - name: log-storage
          hostPath:
            path: /root/logs.log
            type: FileOrCreate
