k8s/killercoda/13_pvc_sc.yaml
apiVersion: v1
kind: Pod
metadata:
  name: fast-pod-cka
spec:
  containers:
    - name: nginx
      image: nginx:latest
      volumeMounts:
        - name: fast-storage-vol
          mountPath: /app/data
  volumes:
    - name: fast-storage-vol
      persistentVolumeClaim:
        claimName: fast-pvc-cka
