k8s/killercoda/15_pvc.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-pod-cka
spec:
  containers:
    - name: my-container
      image: nginx:latest
      volumeMounts:
        - name: storage
          mountPath: /var/www/html
  tolerations:
  - key: "node-role.kubernetes.io/control-plane"
    operator: "Exists"
    effect: "NoSchedule"
  volumes:
    - name: storage
      persistentVolumeClaim:
        claimName: nginx-pvc-cka
