k8s/killercoda/16_pvc.yaml
apiVersion: v1
kind: Pod
metadata:
  name: my-pod-cka
spec:
  volumes:
    - name: storage
      persistentVolumeClaim:
        claimName: my-pvc-cka
  containers:
    - name: nginx
      image: nginx
      volumeMounts:
        - name: storage
          mountPath: /var/www/html
