k8s/killercoda/03_nginxsvc.yaml
# Lab 02: Expose existing pod nginxpod as a Service
# Reference: https://youtu.be/Zm5sy6otLGc - CKA Practice Exam (mock questions) - Real 30 Practice questions and Answers
# Problem Statement:
#   - Expose an existing pod named "nginxpod" as a Service
#   - The Service should be named "nginx-svc"
#   - Pod is listening on port 80

apiVersion: v1
kind: Pod 
metadata:
  name: nginxpod 
  labels:
    app: nginx 
spec:
  containers:
    - name: nginx 
      image: nginx 
      resources:
        limits:
          cpu: "250m"
          memory: "250m"
        requests:
          cpu: "100m"
          memory: "100m"
      ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service 
metadata:
  name: nginxsvc 
spec:
  type: ClusterIP
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
